[gd_scene load_steps=41 format=3 uid="uid://fdgjnt3f4u6u"]

[ext_resource type="Script" path="res://Scripts/GUI/main_menu_ui.gd" id="1_go47f"]
[ext_resource type="Texture2D" uid="uid://c1lero7mqpehw" path="res://Assets/UI/Main Menu/MainMenu-Background2.png" id="2_op0qx"]
[ext_resource type="Texture2D" uid="uid://dtb46jiyiaq7x" path="res://Assets/UI/Main Menu/MainMenu-Background.png" id="2_vor62"]
[ext_resource type="Texture2D" uid="uid://crjj4urth2qui" path="res://Assets/UI/Main Menu/MainMenu-Background3.png" id="3_sb4u8"]
[ext_resource type="Texture2D" uid="uid://x0nqrnp0nvg" path="res://Assets/UI/Main Menu/MainMenu-Background4.png" id="4_61d7i"]
[ext_resource type="Texture2D" uid="uid://xbdpv5tq53wy" path="res://Assets/UI/Main Menu/JustinWakeUp1.png" id="6_8mb6r"]
[ext_resource type="Texture2D" uid="uid://dtmy1a54gfo6k" path="res://Assets/UI/Main Menu/JustinSleeping2.png" id="6_hgkpw"]
[ext_resource type="Script" path="res://Scripts/GUI/mainmenubackground.gd" id="6_ust7v"]
[ext_resource type="Texture2D" uid="uid://wphwi8r5lcve" path="res://Assets/UI/Main Menu/JustinSleeping3.png" id="7_fuicp"]
[ext_resource type="Texture2D" uid="uid://bokoncrgkgqoa" path="res://Assets/UI/Main Menu/JustinWakeUp2.png" id="7_gb2yv"]
[ext_resource type="Texture2D" uid="uid://bcto0rc11pe6w" path="res://Assets/UI/Main Menu/JustinWakeUp3.png" id="8_dbv6u"]
[ext_resource type="Texture2D" uid="uid://beslwhfuysc7l" path="res://Assets/UI/Main Menu/JustinSleeping4.png" id="8_fcmab"]
[ext_resource type="Texture2D" uid="uid://clbghl57u176j" path="res://Assets/UI/Main Menu/JustinWakeUp4.png" id="9_54ny6"]
[ext_resource type="Texture2D" uid="uid://b41515u70snph" path="res://Assets/UI/Empty Buttons/Button-Empty.png" id="14_isf0h"]
[ext_resource type="Texture2D" uid="uid://dlisuewnoi6s4" path="res://Assets/UI/Empty Buttons/Button-Empty-Pressed.png" id="15_sa5gh"]
[ext_resource type="Texture2D" uid="uid://bqtov3bjn6o2a" path="res://Assets/UI/Empty Buttons/Button-Empty-Highlighted.png" id="16_tyhqo"]
[ext_resource type="Texture2D" uid="uid://blulf1rcmd2mb" path="res://Assets/UI/Empty Buttons/Yes-Button-Frame.png" id="19_nrvs0"]
[ext_resource type="Texture2D" uid="uid://c6jvr7p3la1hj" path="res://Assets/UI/Empty Buttons/Yes-Button-Frame.Pressed.png" id="20_kyl4u"]
[ext_resource type="Texture2D" uid="uid://veuh0v2ue41u" path="res://Assets/UI/Empty Buttons/Yes-Button-Frame.Highlight.png" id="22_wt2pm"]
[ext_resource type="Texture2D" uid="uid://ctc36cfyk41fo" path="res://Assets/UI/Empty Buttons/No-Button-Frame.png" id="23_ucl3i"]
[ext_resource type="Texture2D" uid="uid://djixiof3qm31w" path="res://Assets/UI/Empty Buttons/No-Button-Frame.Pressed.png" id="24_hif7g"]
[ext_resource type="Texture2D" uid="uid://cm0awbknpj4hp" path="res://Assets/UI/Empty Buttons/No-Button-Frame-Highlight.png" id="26_j1skl"]
[ext_resource type="Texture2D" uid="uid://curjr7m07na01" path="res://Assets/UI/Confirm Pop-Up/ConfirmPop-up-Background.png" id="30_icipw"]
[ext_resource type="Texture2D" uid="uid://tpd4lr0132ti" path="res://Assets/UI/logventure-button.png" id="40_sk7ek"]
[ext_resource type="PackedScene" uid="uid://chkd7lgphi0cv" path="res://GameComponents/GUI/options_ui.tscn" id="52_4k1wg"]
[ext_resource type="Texture2D" uid="uid://dh8uxvwelnqim" path="res://Assets/UI/Score/HighestScore.png" id="56_y3vlv"]
[ext_resource type="FontFile" uid="uid://bg1oq07gebwu4" path="res://Assets/UI/Fonts/pixeloid-font/PixeloidSansBold-PKnYd.ttf" id="57_lvlfe"]
[ext_resource type="PackedScene" uid="uid://cb1i5u782gu14" path="res://GameComponents/GUI/credits_menu.tscn" id="58_goy0w"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4s1lb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_op0qx")
}, {
"duration": 1.0,
"texture": ExtResource("3_sb4u8")
}, {
"duration": 1.0,
"texture": ExtResource("4_61d7i")
}, {
"duration": 1.0,
"texture": ExtResource("2_vor62")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_dfgxh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_8mb6r")
}, {
"duration": 10.0,
"texture": ExtResource("7_gb2yv")
}, {
"duration": 1.0,
"texture": ExtResource("8_dbv6u")
}, {
"duration": 1.0,
"texture": ExtResource("9_54ny6")
}],
"loop": true,
"name": &"awake",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_hgkpw")
}, {
"duration": 1.0,
"texture": ExtResource("7_fuicp")
}, {
"duration": 1.0,
"texture": ExtResource("8_fcmab")
}],
"loop": true,
"name": &"sleep",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_gfefl"]
font = ExtResource("57_lvlfe")
font_size = 60
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pjcio"]
font = ExtResource("57_lvlfe")
font_size = 60
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nf7o4"]
font = ExtResource("57_lvlfe")
font_size = 60
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xp3e4"]
font = ExtResource("57_lvlfe")
font_size = 60
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hlpmw"]
font = ExtResource("57_lvlfe")
font_size = 60
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_86t7l"]
font = ExtResource("57_lvlfe")
font_size = 60
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_aedfi"]
font = ExtResource("57_lvlfe")
font_size = 60
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qw8dv"]
font = ExtResource("57_lvlfe")
font_size = 60
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_auydg"]
font = ExtResource("57_lvlfe")
font_size = 20
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4p73v"]
font = ExtResource("57_lvlfe")
font_size = 50

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_go47f")
metadata/_edit_horizontal_guides_ = []

[node name="BackgroundImage" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(12, 12)
sprite_frames = SubResource("SpriteFrames_4s1lb")
autoplay = "default"
frame = 1
frame_progress = 0.211485
centered = false
script = ExtResource("6_ust7v")

[node name="Justin" type="AnimatedSprite2D" parent="BackgroundImage"]
position = Vector2(12.5, 55.75)
sprite_frames = SubResource("SpriteFrames_dfgxh")
animation = &"awake"
autoplay = "sleep"
centered = false

[node name="TextureButton" type="TextureButton" parent="BackgroundImage"]
modulate = Color(1, 1, 1, 0)
offset_left = 12.4167
offset_top = 55.5
offset_right = 39.4167
offset_bottom = 86.5
texture_normal = ExtResource("7_gb2yv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 163.0
offset_top = -212.0
offset_right = 204.0
offset_bottom = -171.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(12, 12)

[node name="PlayButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../CreditsButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../../CreditsButton")
texture_normal = ExtResource("14_isf0h")
texture_pressed = ExtResource("15_sa5gh")
texture_hover = ExtResource("16_tyhqo")
texture_focused = ExtResource("16_tyhqo")

[node name="Play" type="Label" parent="VBoxContainer/PlayButton"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
offset_left = 2.50018
offset_top = 0.833313
offset_right = 402.5
offset_bottom = 100.833
scale = Vector2(0.09, 0.09)
text = "PLAY"
label_settings = SubResource("LabelSettings_gfefl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../PlayButton")
texture_normal = ExtResource("14_isf0h")
texture_pressed = ExtResource("15_sa5gh")
texture_hover = ExtResource("16_tyhqo")
texture_focused = ExtResource("16_tyhqo")

[node name="Options" type="Label" parent="VBoxContainer/OptionsButton"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
offset_left = 2.50037
offset_top = 0.999969
offset_right = 402.5
offset_bottom = 101.0
scale = Vector2(0.09, 0.09)
text = "OPTIONS"
label_settings = SubResource("LabelSettings_gfefl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../CreditsButton")
focus_next = NodePath("../../CreditsButton")
focus_previous = NodePath("../OptionsButton")
texture_normal = ExtResource("14_isf0h")
texture_pressed = ExtResource("15_sa5gh")
texture_hover = ExtResource("16_tyhqo")
texture_focused = ExtResource("16_tyhqo")

[node name="Exit" type="Label" parent="VBoxContainer/ExitButton"]
layout_mode = 0
offset_left = 1.16663
offset_top = 2.0
offset_right = 437.167
offset_bottom = 85.0
scale = Vector2(0.085, 0.085)
text = " EXIT GAME"
label_settings = SubResource("LabelSettings_gfefl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -222.0
offset_right = 69.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Level1Button" type="TextureButton" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../BackButton")
focus_neighbor_right = NodePath("../Level2Button")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/Level3Button")
focus_next = NodePath("../Level2Button")
focus_previous = NodePath("../../../BackButton")
texture_normal = ExtResource("14_isf0h")
texture_pressed = ExtResource("15_sa5gh")
texture_hover = ExtResource("16_tyhqo")
texture_focused = ExtResource("16_tyhqo")

[node name="Level1" type="Label" parent="VBoxContainer2/HBoxContainer/Level1Button"]
layout_mode = 2
offset_left = 7.4
offset_top = 2.2
offset_right = 316.4
offset_bottom = 85.2
scale = Vector2(0.09, 0.09)
text = "LEVEL 1"
label_settings = SubResource("LabelSettings_pjcio")

[node name="Level2Button" type="TextureButton" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Level1Button")
focus_neighbor_top = NodePath("../../../BackButton")
focus_neighbor_right = NodePath("../../HBoxContainer2/Level3Button")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/Level4Button")
focus_next = NodePath("../../HBoxContainer2/Level3Button")
focus_previous = NodePath("../Level1Button")
texture_normal = ExtResource("14_isf0h")
texture_pressed = ExtResource("15_sa5gh")
texture_hover = ExtResource("16_tyhqo")
texture_focused = ExtResource("16_tyhqo")

[node name="Play3" type="Label" parent="VBoxContainer2/HBoxContainer/Level2Button"]
layout_mode = 2
offset_left = 7.4
offset_top = 2.2
offset_right = 316.4
offset_bottom = 85.2
scale = Vector2(0.09, 0.09)
text = "LEVEL 2"
label_settings = SubResource("LabelSettings_nf7o4")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Level3Button" type="TextureButton" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath("../../HBoxContainer/Level2Button")
focus_neighbor_top = NodePath("../../HBoxContainer/Level1Button")
focus_neighbor_right = NodePath("../Level4Button")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/Level5Button")
focus_next = NodePath("../Level4Button")
focus_previous = NodePath("../../HBoxContainer/Level2Button")
texture_normal = ExtResource("14_isf0h")
texture_pressed = ExtResource("15_sa5gh")
texture_hover = ExtResource("16_tyhqo")
texture_focused = ExtResource("16_tyhqo")

[node name="Play4" type="Label" parent="VBoxContainer2/HBoxContainer2/Level3Button"]
layout_mode = 2
offset_left = 7.4
offset_top = 2.2
offset_right = 316.4
offset_bottom = 85.2
scale = Vector2(0.09, 0.09)
text = "LEVEL 3"
label_settings = SubResource("LabelSettings_xp3e4")

[node name="Level4Button" type="TextureButton" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath("../Level3Button")
focus_neighbor_top = NodePath("../../HBoxContainer/Level2Button")
focus_neighbor_right = NodePath("../../HBoxContainer3/Level5Button")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/Level6Button")
focus_next = NodePath("../../HBoxContainer3/Level5Button")
focus_previous = NodePath("../Level3Button")
texture_normal = ExtResource("14_isf0h")
texture_pressed = ExtResource("15_sa5gh")
texture_hover = ExtResource("16_tyhqo")
texture_focused = ExtResource("16_tyhqo")

[node name="Play5" type="Label" parent="VBoxContainer2/HBoxContainer2/Level4Button"]
layout_mode = 2
offset_left = 7.4
offset_top = 2.2
offset_right = 316.4
offset_bottom = 85.2
scale = Vector2(0.09, 0.09)
text = "LEVEL 4"
label_settings = SubResource("LabelSettings_hlpmw")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Level5Button" type="TextureButton" parent="VBoxContainer2/HBoxContainer3"]
layout_mode = 2
focus_neighbor_left = NodePath("../../HBoxContainer2/Level4Button")
focus_neighbor_top = NodePath("../../HBoxContainer2/Level3Button")
focus_neighbor_right = NodePath("../Level6Button")
focus_neighbor_bottom = NodePath("../../HBoxContainer4/InfiniteButton")
focus_next = NodePath("../Level6Button")
focus_previous = NodePath("../../HBoxContainer2/Level4Button")
texture_normal = ExtResource("14_isf0h")
texture_pressed = ExtResource("15_sa5gh")
texture_hover = ExtResource("16_tyhqo")
texture_focused = ExtResource("16_tyhqo")

[node name="Play6" type="Label" parent="VBoxContainer2/HBoxContainer3/Level5Button"]
layout_mode = 2
offset_left = 7.4
offset_top = 2.2
offset_right = 316.4
offset_bottom = 85.2
scale = Vector2(0.09, 0.09)
text = "LEVEL 5"
label_settings = SubResource("LabelSettings_86t7l")

[node name="Level6Button" type="TextureButton" parent="VBoxContainer2/HBoxContainer3"]
layout_mode = 2
focus_neighbor_left = NodePath("../Level5Button")
focus_neighbor_top = NodePath("../../HBoxContainer2/Level4Button")
focus_neighbor_right = NodePath("../../HBoxContainer4/InfiniteButton")
focus_neighbor_bottom = NodePath("../../../BackButton")
focus_next = NodePath("../../../BackButton")
focus_previous = NodePath("../Level5Button")
texture_normal = ExtResource("14_isf0h")
texture_pressed = ExtResource("15_sa5gh")
texture_hover = ExtResource("16_tyhqo")
texture_focused = ExtResource("16_tyhqo")

[node name="Play7" type="Label" parent="VBoxContainer2/HBoxContainer3/Level6Button"]
layout_mode = 2
offset_left = 7.4
offset_top = 2.2
offset_right = 316.4
offset_bottom = 85.2
scale = Vector2(0.09, 0.09)
text = "LEVEL 6"
label_settings = SubResource("LabelSettings_aedfi")

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="InfiniteButton" type="TextureButton" parent="VBoxContainer2/HBoxContainer4"]
layout_mode = 2
focus_neighbor_left = NodePath("../../HBoxContainer3/Level6Button")
focus_neighbor_top = NodePath("../../HBoxContainer3/Level5Button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../../BackButton")
focus_next = NodePath("../../../BackButton")
focus_previous = NodePath("../../HBoxContainer3/Level6Button")
texture_normal = ExtResource("14_isf0h")
texture_pressed = ExtResource("15_sa5gh")
texture_hover = ExtResource("16_tyhqo")
texture_focused = ExtResource("16_tyhqo")

[node name="Play8" type="Label" parent="VBoxContainer2/HBoxContainer4/InfiniteButton"]
layout_mode = 2
offset_left = 5.49
offset_top = 2.2
offset_right = 351.49
offset_bottom = 85.2
scale = Vector2(0.09, 0.09)
text = "INFINITE"
label_settings = SubResource("LabelSettings_qw8dv")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -724.0
offset_top = -462.0
offset_right = 236.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
texture = ExtResource("30_icipw")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = -169.0
offset_top = 59.0
offset_right = -126.0
offset_bottom = 70.0
scale = Vector2(8, 8)

[node name="YesButton" type="TextureButton" parent="Panel/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../NoButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../NoButton")
focus_previous = NodePath("../NoButton")
texture_normal = ExtResource("19_nrvs0")
texture_pressed = ExtResource("20_kyl4u")
texture_hover = ExtResource("22_wt2pm")
texture_focused = ExtResource("22_wt2pm")

[node name="Yes" type="Label" parent="Panel/HBoxContainer/YesButton"]
layout_mode = 0
offset_left = 4.5
offset_top = 1.875
offset_right = 208.5
offset_bottom = 84.875
scale = Vector2(0.09, 0.09)
text = "YES"
label_settings = SubResource("LabelSettings_gfefl")

[node name="NoButton" type="TextureButton" parent="Panel/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../YesButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../YesButton")
focus_previous = NodePath("../YesButton")
texture_normal = ExtResource("23_ucl3i")
texture_pressed = ExtResource("24_hif7g")
texture_hover = ExtResource("26_j1skl")
texture_focused = ExtResource("26_j1skl")

[node name="No" type="Label" parent="Panel/HBoxContainer/NoButton"]
layout_mode = 0
offset_left = 5.0
offset_top = 1.625
offset_right = 209.0
offset_bottom = 84.625
scale = Vector2(0.09, 0.09)
text = "NO"
label_settings = SubResource("LabelSettings_gfefl")

[node name="CreditsButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 1680.0
offset_top = 907.0
offset_right = 1721.0
offset_bottom = 939.0
scale = Vector2(6, 6)
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../VBoxContainer/ExitButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../VBoxContainer/PlayButton")
focus_next = NodePath("../VBoxContainer/PlayButton")
focus_previous = NodePath("../VBoxContainer/ExitButton")
texture_normal = ExtResource("40_sk7ek")

[node name="OptionsUI" parent="." instance=ExtResource("52_4k1wg")]
visible = false

[node name="BackButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 1172.0
offset_top = 908.0
offset_right = 1213.0
offset_bottom = 919.0
scale = Vector2(10, 10)
focus_neighbor_left = NodePath("../VBoxContainer2/HBoxContainer4/InfiniteButton")
focus_neighbor_top = NodePath("../VBoxContainer2/HBoxContainer4/InfiniteButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../VBoxContainer2/HBoxContainer/Level1Button")
focus_next = NodePath("../VBoxContainer2/HBoxContainer/Level1Button")
focus_previous = NodePath("../VBoxContainer2/HBoxContainer4/InfiniteButton")
texture_normal = ExtResource("14_isf0h")
texture_pressed = ExtResource("15_sa5gh")
texture_hover = ExtResource("16_tyhqo")
texture_focused = ExtResource("16_tyhqo")

[node name="Back" type="Label" parent="BackButton"]
layout_mode = 0
offset_left = 12.7001
offset_top = 2.40002
offset_right = 216.7
offset_bottom = 85.4
scale = Vector2(0.09, 0.09)
text = "BACK"
label_settings = SubResource("LabelSettings_gfefl")

[node name="Panel2" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 2
offset_left = 1399.0
offset_top = 768.0
offset_right = 1399.0
offset_bottom = 768.0

[node name="TextureRect" type="TextureRect" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 410.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("56_y3vlv")

[node name="Label2" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 201.0
offset_top = 70.0
offset_right = 449.0
offset_bottom = 98.0
label_settings = SubResource("LabelSettings_auydg")
horizontal_alignment = 1

[node name="HighestScore" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 97.0
offset_top = 26.0
offset_right = 640.0
offset_bottom = 109.0
scale = Vector2(0.45, 0.45)
text = "HIGHEST SCORE"
label_settings = SubResource("LabelSettings_4p73v")

[node name="Credits" parent="." instance=ExtResource("58_goy0w")]
visible = false
layout_mode = 1

[connection signal="animation_looped" from="BackgroundImage/Justin" to="BackgroundImage" method="_on_justin_animation_looped"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer2/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer2/Level4Button" to="." method="_on_level_4_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/Level5Button" to="." method="_on_level_5_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/Level6Button" to="." method="_on_level_6_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer4/InfiniteButton" to="." method="_on_infinite_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
